--- a/sunshine/src/main/AndroidManifest.xml
+++ b/sunshine/src/main/AndroidManifest.xml
@@ -7,16 +7,24 @@
     <!-- Required to act as a custom watch face. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true"
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        <service android:name=".SunshineWatchFace" android:label="@string/my_digital_name"
+        <service
+            android:name=".MyWatchFace"
+            android:label="@string/my_digital_name"
             android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data android:name="android.service.wallpaper"
+            <meta-data
+                android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
-            <meta-data android:name="com.google.android.wearable.watchface.preview"
+            <meta-data
+                android:name="com.google.android.wearable.watchface.preview"
                 android:resource="@drawable/preview_digital" />
-            <meta-data android:name="com.google.android.wearable.watchface.preview_circular"
+            <meta-data
+                android:name="com.google.android.wearable.watchface.preview_circular"
                 android:resource="@drawable/preview_digital_circular" />
 
             <intent-filter>
@@ -25,8 +33,12 @@
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
             </intent-filter>
         </service>
+        <intent-filter>
+            <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+        </intent-filter>
 
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
 
