--- a/sunshine/src/main/AndroidManifest.xml
+++ b/sunshine/src/main/AndroidManifest.xml
@@ -40,6 +40,17 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <service
+            android:name="com.example.android.sunshine.app.WeatherListenerService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:path="/weather-data" />
+            </intent-filter>
+
+        </service>
     </application>
 
 </manifest>
