Adding weather info to watchface

--- a/sunshine/src/main/AndroidManifest.xml
+++ b/sunshine/src/main/AndroidManifest.xml
@@ -49,7 +49,9 @@
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
                 <data android:scheme="wear" android:host="*" android:path="/weather-data" />
             </intent-filter>
-
+            <intent-filter>
+                <action android:name="com.example.android.sunshine.app.WeatherListenerService.ACTION_WEATHER_CHANGED" />
+             </intent-filter>
         </service>
     </application>
 
